# CopperMind

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: mnist.rs
src/: lib.rs
