[package]
name = "copper_mind"
version = "0.1.0"
authors = ["Andrew <papsanly@gmail.com>"]
license = "MIT"
description = "Implementation of a perceptron neural network"
repository = "https://github.com/Papsanly/CopperMind"
keywords = ["neural-network", "perceptron", "data-science"]
readme = "README.md"
categories = ["science", "science::neuroscience"]
edition = "2024"

[dependencies]
bon = "3.9.2"
rand = "0.8"
tensor = { version = "0.1.0", path = "../tensor" }
